// app/build.gradle (Groovy)
import java.util.Properties

plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.plugin.compose'
    id 'com.google.gms.google-services'
    id 'org.jetbrains.kotlin.kapt'
}

def localProps = new Properties()
def localPropsFile = rootProject.file("local.properties")
if (localPropsFile.exists()) {
    localPropsFile.withInputStream { localProps.load(it) }
}

android {
    namespace 'com.example.aiassistantcoder'
    compileSdk 36

    defaultConfig {
        applicationId "com.example.aiassistantcoder"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        buildConfigField "String", "GEMINI_MODEL", "\"gemini-1.5-flash\""
        def geminiKey = localProps.getProperty("GEMINI_API_KEY", "")
        buildConfigField "String", "GEMINI_API_KEY", "\"${geminiKey}\""

        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
        }

        vectorDrawables { useSupportLibrary true }
    }

    buildFeatures {
        buildConfig = true
        compose true }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
        }
        debug {
            jniDebuggable true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
        coreLibraryDesugaringEnabled true
    }
    kotlinOptions { jvmTarget = "17" }
}

dependencies {
    // your version catalog lines (keep if you use libs.XXX)
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout

    //UI
    implementation libs.material.v1130
    implementation libs.appcompat.v171
    implementation libs.foundation
    implementation libs.foundation.layout

    // --- Jetpack Compose ---
    def composeBom = libs.androidx.compose.bom
    implementation composeBom
    androidTestImplementation composeBom

    implementation libs.ui
    implementation libs.material3
    implementation libs.androidx.foundation
    implementation libs.androidx.material.icons.extended
    implementation libs.androidx.runtime.livedata

    implementation libs.androidx.ui.tooling.preview
    debugImplementation libs.androidx.ui.tooling

    debugImplementation libs.androidx.ui.test.manifest

    // Core utils
    implementation libs.okhttp
    implementation libs.gson
    implementation libs.guava

    // AndroidX / Arch
    implementation libs.androidx.lifecycle.viewmodel.ktx
    implementation libs.androidx.recyclerview

    // Markdown
    implementation libs.core
    implementation libs.image

    // Firebase (BOM controls versions)
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.auth
    implementation libs.firebase.firestore
    implementation libs.play.services.auth

    // Phone number handling
    implementation libs.libphonenumber
    implementation libs.ccp

    // Images
    implementation libs.glide
    kapt "com.github.bumptech.glide:compiler:4.12.0"

    // Code editor (your existing)
    implementation(platform("io.github.rosemoe:editor-bom:0.23.7"))
    implementation 'io.github.rosemoe:editor'
    implementation 'io.github.rosemoe:language-textmate'

    // Desugaring
    coreLibraryDesugaring libs.desugar.jdk.libs

    // Misc
    implementation libs.jsoup
}
